; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_158.c_showHELP.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_158.c_showHELP.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i8* }

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [22 x i8] c"Usage: %s [Options] \0A\00", align 1
@.str.1 = private unnamed_addr constant [258 x i8] c"Options:\0A\09-h [remote host]\09remote host\0A\09-P [server port]\09server port\0A\09-t [system type]\09choice the system type\0A\09-u [user   name]\09login with this username\0A\09-p [pass   word]\09login with this passwd\0A\09-d [shell  port]\09rebind using this port (default: ftpd port)\0A\0A\00", align 1
@.str.2 = private unnamed_addr constant [19 x i8] c"num . description\0A\00", align 1
@.str.3 = private unnamed_addr constant [62 x i8] c"----+-------------------------------------------------------\0A\00", align 1
@MAX_NUM = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [10 x i8] c"%3d | %s\0A\00", align 1
@architectures = common dso_local global %struct.TYPE_2__* null, align 8
@.str.5 = private unnamed_addr constant [7 x i8] c"    '\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @showHELP(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %4 = load i32, i32* @stderr, align 4
  %5 = load i8*, i8** %2, align 8
  %6 = call i32 (i32, i8*, ...) @fprintf(i32 %4, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0), i8* %5)
  %7 = load i32, i32* @stderr, align 4
  %8 = call i32 (i32, i8*, ...) @fprintf(i32 %7, i8* getelementptr inbounds ([258 x i8], [258 x i8]* @.str.1, i64 0, i64 0))
  %9 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.2, i64 0, i64 0))
  %10 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([62 x i8], [62 x i8]* @.str.3, i64 0, i64 0))
  store i32 0, i32* %3, align 4
  br label %11

11:                                               ; preds = %24, %1
  %12 = load i32, i32* %3, align 4
  %13 = load i32, i32* @MAX_NUM, align 4
  %14 = icmp sle i32 %12, %13
  br i1 %14, label %15, label %27

15:                                               ; preds = %11
  %16 = load i32, i32* %3, align 4
  %17 = load %struct.TYPE_2__*, %struct.TYPE_2__** @architectures, align 8
  %18 = load i32, i32* %3, align 4
  %19 = sext i32 %18 to i64
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i64 %19
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 0
  %22 = load i8*, i8** %21, align 8
  %23 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.4, i64 0, i64 0), i32 %16, i8* %22)
  br label %24

24:                                               ; preds = %15
  %25 = load i32, i32* %3, align 4
  %26 = add nsw i32 %25, 1
  store i32 %26, i32* %3, align 4
  br label %11

27:                                               ; preds = %11
  %28 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.5, i64 0, i64 0))
  ret void
}

declare dso_local i32 @fprintf(i32, i8*, ...) #1

declare dso_local i32 @printf(i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
